PRJ_VER=1.1.7
SUMMARY=
REDHAT_BUGZILLA=
[Changes]
- Changed Modules:
  + ManageRPM
    - Add support of pre, post, and preun
